loadbalancer/create-pod-bar.yaml
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
    svc: foo-bar
spec:
  containers:
  - name: bar-app
    image: nginx:1.22.0
    volumeMounts:
    - name: config
      mountPath: /usr/share/nginx/html
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: bar-config
