loadbalancer/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # rewrite the URL to remove the path prefix /foo, /bar, /foo-bar
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/foo(/|$)(.*)" # match /foo and /bar/ and /foo/anything to /index.html
        backend:
          service:
            name: foo-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: "/bar(/|$)(.*)"
        backend:
          service:
            name: bar-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: "/foo-bar(/|$)(.*)"
        backend:
          service:
            name: foo-bar-service
            port:
              number: 80
